# ML_AI_study

./: .flake8  .gitignore  README.md
intro2ML/: iris_sepal.ipynb  pyproject.toml
intro2ML/chapter2/: breast_cancer.ipynb  cali_house_reg.ipynb  diabetes_reg.ipynb  forge_data_set.ipynb  wave_datasets.ipynb
intro2ML/chapter_1/: iris_sepal.ipynb
intro2ML/intro2ml/: check_iris_model.pkl  iris_knn.py
intro2ML/intro2ml/chapter_1/: iris_model_create.py
intro2ML/intro2ml/handlers/: iris_knn.py
